--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ dot_zshrc.backup
 dot_config/ghostty/icons
 dot_config/ghostty/dot_DS_Store
 dot_config/zellij/config.kdl.*
+dot_config/zellij/zjstatus
